--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "./node_modules/.bin/eslint src/**",
+    "test": "./node_modules/.bin/jest",
+    "tdd": "./node_modules/.bin/jest --watch"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +18,13 @@
     "jsontoxml": "^1.0.1",
     "mysql2": "^2.1.0",
     "sequelize": "^6.2.4"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3"
   }
 }
