--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test workflow
+name: Qualidade de código
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
       run: npm install
     - name: Run tests
       run: npm run test
-  linter-check:
+  linter:
     runs-on: ubuntu-latest
 
     steps:
