--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node api/index",
+    "dev": "./node_modules/.bin/nodemon api/index",
     "lint": "./node_modules/.bin/eslint .",
     "test": "./node_modules/.bin/jest",
-    "tdd": "./node_modules/.bin/jest --watch"
+    "tdd": "./node_modules/.bin/jest --watch",
+    "sincronizar-tabelas": "node ./api/banco-de-dados/criarTabelas.js"
   },
   "keywords": [],
   "author": "",
@@ -25,6 +28,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6"
   }
 }
